# PIPS

./: .gitignore  .gitmodules  LEARNINGS.md  Observations.md  README.md  TODOS.md  TODOS_prosip.md  benchmark_dataloader.py  cli.py  compile_test.py  loader_overlap_summary.md  pyproject.toml  setup.py  simple_train.ipynb  task_dataset.py  test_compile.py  toy_entropy_loss.py  train_ctd_autoencoder.py  train_dvae.py  train_mnist.py  train_prosip.py  train_vqvae.py  trajectories.py  yaae.py
archived/: codebook.py  compile_test.py  debug_gumbel.py  debug_overfitting.py  testing_gumbel.py  yaae.py
archived/adaptive_weights/: adaptive_weights.py  mnist_test.py
config/: config.yaml
config/model/: default.yaml
configs/: ctd_default.yaml  defaults.yaml  vqvae_defaults.yaml
configs/CTD_v1/: ctd_v1.yaml  ctd_v2.yaml  ctd_v3.yaml  ctd_v4.yaml  ctd_v5.yaml
configs/CTD_v2/: v10_ckpt.yaml  v10_ckpt_v2.yaml  v10_nockpt.yaml  v10_nockpt_v2.yaml  v10_nockpt_v3.yaml  v10_nockpt_v32.yaml  v10_nockpt_v4_noema.yaml  v10_nocodebook.yaml  v10_nocodebook_v2.yaml  v11_nockpt.yaml  v12_nockpt.yaml  v13_nockpt.yaml  v14_overused_reset.yaml  v15_nockpt.yaml  v1_nockpt.yaml  v2_nockpt.yaml  v3_nockpt.yaml  v4_nockpt.yaml  v5_nockpt.yaml  v6_nockpt.yaml  v7_nockpt.yaml  v8_nockpt.yaml  v9_nockpt.yaml
configs/DLR_v1/: dlr_small.yaml  dlr_small_quant.yaml  dlr_v1.yaml  dlr_v10_noise_8G8LD512H4.yaml  dlr_v11_noise_8G8LD512H32.yaml  dlr_v12_noise_8G8LD384H6.yaml  dlr_v14_quant_learn.yaml  dlr_v15_quant_learn_noentropy.yaml  dlr_v16_quant_learn_noentropy_outnorm.yaml  dlr_v16_quant_learn_noentropy_outnorm_v2.yaml  dlr_v17_quant_learn_noentropy_outnorm_no1drope.yaml  dlr_v18_quant_learn_noentropy_outnorm_resample.yaml  dlr_v19_quant_learn_outnorm_resample_noiseL2.yaml  (+17 more)
pips/: __main__.py  ctd_autoencoder.py  data.py  dvae.py  grid_dataset.py  kld.py  task.py  task_dataset.py  tokenizer.py  utils.py  visualization.py  vq_vae.py  vq_vae_ref.py
prosip/: grid_autoencoder.py  interpreter.py  latent_autoencoder.py  model.py  repl.py  task_dataset.py  trajectory_loss.py  utils.py
prosip_configs/: autoencoder.yaml  default.yaml
tests/: test_data.py  test_dvae.py  test_grid_dataset.py  test_kld.py  test_task.py  test_task_dataset.py  test_tokenizer.py  test_utils.py
(+4550 files in other folders)
