[tool.poetry]
name = "pips"
version = "0.1.0"
description = "Perception Informed Program Synthesis"
authors = ["abhitopia@is.me"]
readme = "README.md"
packages = [{include = "pips"}]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
typer = {extras = ["all"], version = "^0.9.0"}
omegaconf = "^2.3.0"
numpy = "^2.1.3"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pips = "cli:app"
