[tool.poetry]
name = "pips"
version = "0.1.0"
description = "Perception Informed Program Synthesis"
authors = ["abhitopia@is.me"]
readme = "README.md"
packages = [{include = "pips"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hydra-core = "^1.3.2"
typer = {extras = ["all"], version = "^0.9.0"}
omegaconf = "^2.3.0"
numpy = "^2.1.3"
torch = "^2.6.0"
pillow = "^11.1.0"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
ujson = "^5.10.0"
h5py = "^3.12.1"
wandb = "^0.19.3"
pytorch-lightning = "^2.5.0.post0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pips = "cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]